bad/assign_field_class_mcall_void.example_compiler_output
ERROR
[1mbad/assign_field_class_mcall_void.lat:13:20: [1;31merror: [0;1massigning to `Y` from incompatible type `void`[m
	(new M).foo().fld = vfunc();
	                  [1;32m^[m
